unpackaged/main/default/objects/nbavs__EventLog__c/nbavs__EventLog__c.object-meta.xml
<CustomObject>
    <label>Event Log</label>
    <nameField>
        <displayFormat>{0000000000}</displayFormat>
        <label>Index</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>