unpackaged/main/default/objects/nbavs__EventLog__c/fields/nbavs__Date__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Date__c</fullName>
    <label>Date</label>
    <type>DateTime</type>
</CustomField>