unpackaged/main/default/objects/nbavs__EventLog__c/fields/nbavs__Feature__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Feature__c</fullName>
    <label>Feature</label>
    <length>100</length>
    <type>Text</type>
</CustomField>