unpackaged/main/default/objects/nbavs__EventLog__c/fields/nbavs__Level__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Critical</fullName>
                <default>true</default>
                <label>Critical</label>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Warning</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>