unpackaged/main/default/objects/nbavs__EventLog__c/fields/nbavs__LogLink__c.field-meta.xml
<CustomField>
    <fullName>nbavs__LogLink__c</fullName>
    <label>Log Link</label>
    <type>Url</type>
</CustomField>