unpackaged/main/default/objects/nbavs__EventLog__c/fields/nbavs__ObjectId__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ObjectId__c</fullName>
    <label>Object ID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>