unpackaged/main/default/objects/nbavs__EventLog__c/fields/nbavs__ObjectURL__c.field-meta.xml
<CustomField>
    <fullName>nbavs__ObjectURL__c</fullName>
    <label>Object (Target)</label>
    <type>Url</type>
</CustomField>