unpackaged/main/default/objects/nbavs__EventLog__c/fields/nbavs__User__c.field-meta.xml
<CustomField>
    <fullName>nbavs__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Natterbox User</label>
    <referenceTo>nbavs__User__c</referenceTo>
    <relationshipLabel>Event Logs</relationshipLabel>
    <relationshipName>Event_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>