unpackaged/main/default/objects/nbavs__EventLog__c/fields/nbavs__UUID__c.field-meta.xml
<CustomField>
    <fullName>nbavs__UUID__c</fullName>
    <label>UUID</label>
    <length>50</length>
    <type>Text</type>
</CustomField>