unpackaged/main/default/objects/nbavs__EventLog__c/listViews/nbavs__All.listView-meta.xml
<ListView>
    <fullName>nbavs__All</fullName>
    <columns>NAME</columns>
    <columns>nbavs__Date__c</columns>
    <columns>nbavs__Type__c</columns>
    <columns>nbavs__Feature__c</columns>
    <columns>nbavs__Level__c</columns>
    <columns>nbavs__User__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>nbavs__ObjectURL__c</columns>
    <columns>nbavs__LogLink__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>