unpackaged/main/default/objects/nbavs__EventLog__c/listViews/nbavs__Event_Default_View.listView-meta.xml
<ListView>
    <fullName>nbavs__Event_Default_View</fullName>
    <columns>NAME</columns>
    <columns>nbavs__Date__c</columns>
    <columns>nbavs__Type__c</columns>
    <columns>nbavs__Feature__c</columns>
    <columns>nbavs__Level__c</columns>
    <columns>nbavs__User__c</columns>
    <filterScope>Everything</filterScope>
    <label>Event Default View</label>
</ListView>